[package]
name = "thiery-core"
version = "0.1.0-BETA"
edition = "2024"

[dependencies]
thiery-lib = { path = "../thiery-lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
